<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".AddRecipeActivity">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_txt" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_description"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/numServings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num_servings"
        android:inputType="number"
         />



    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe" />

    <Button
        android:id="@+id/btnSignOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_off" />

    <Button
        android:id="@+id/btnGoRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_recipes" />


</LinearLayout>
