<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup" />

    <EditText
        android:id="@+id/txtSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/txtSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
         />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />

    <Button
        android:id="@+id/btnGoLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_login"
        />
</LinearLayout>
