<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/ingredientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginStart="2dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
    </LinearLayout>



