<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg7"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".LoginActivity"
  >




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoname3"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="150dp"
        />
    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="#83FFFFFF"
        android:textSize="25dp"
        android:clickable="true"

        />

    </LinearLayout>

    <EditText
        android:id="@+id/txtLogInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        android:textColorHint="#8BFFFFFF"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/txtLogInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:background="@drawable/input_bg"
        android:textColor="@color/white"
        android:textColorHint="#8BFFFFFF"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
    />


    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"

        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white" />


</LinearLayout>
